Refund preview dialog modifications as per the wireframe

--- a/app/src/main/res/layout/custom_keyboard.xml
+++ b/app/src/main/res/layout/custom_keyboard.xml
@@ -26,6 +26,7 @@
                     android:layout_height="45dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyOneTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:text="1"
@@ -39,6 +40,7 @@
                     android:layout_height="45dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyTwoTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:text="2"
@@ -52,6 +54,7 @@
                     android:layout_height="45dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyThreeTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:text="3"
@@ -65,6 +68,7 @@
                     android:layout_height="45dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyBackLL"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center">
 
@@ -101,6 +105,7 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
+                            android:contentDescription="keyFourTV"
                             android:background="@drawable/custom_keyboard_key_bg"
                             android:gravity="center"
                             android:text="4"
@@ -114,6 +119,7 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
+                            android:contentDescription="keyFiveTV"
                             android:background="@drawable/custom_keyboard_key_bg"
                             android:gravity="center"
                             android:text="5"
@@ -127,6 +133,7 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
+                            android:contentDescription="keySixTV"
                             android:background="@drawable/custom_keyboard_key_bg"
                             android:gravity="center"
                             android:text="6"
@@ -149,6 +156,7 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
+                            android:contentDescription="keySevenTV"
                             android:background="@drawable/custom_keyboard_key_bg"
                             android:gravity="center"
                             android:text="7"
@@ -162,6 +170,7 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
+                            android:contentDescription="keyEightTV"
                             android:background="@drawable/custom_keyboard_key_bg"
                             android:gravity="center"
                             android:text="8"
@@ -175,6 +184,7 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
+                            android:contentDescription="keyNineTV"
                             android:background="@drawable/custom_keyboard_key_bg"
                             android:gravity="center"
                             android:text="9"
@@ -198,6 +208,7 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="2"
+                            android:contentDescription="keyZeroTV"
                             android:background="@drawable/custom_keyboard_key_bg"
                             android:gravity="center"
                             android:text="0"
@@ -211,6 +222,7 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
+                            android:contentDescription="dotTV"
                             android:background="@drawable/custom_keyboard_key_bg"
                             android:gravity="center"
                             android:text="."
@@ -230,6 +242,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyActionLL"
                     android:background="@drawable/custom_keyboard_action_btn_disable_bg"
                     android:gravity="center">
 
