--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -41,7 +41,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:contentDescription="@string/refund_transaction"
+                            android:contentDescription="@string/back"
                             android:src="@drawable/ic_black_back" />
 
                         <TextView
@@ -111,6 +111,7 @@
                                             android:layout_height="@dimen/_78sdp"
                                             android:autofillHints="creditCardSecurityCode"
                                             android:background="@color/white"
+                                            android:contentDescription="refundAmountET"
                                             android:clickable="false"
                                             android:cursorVisible="true"
                                             android:fontFamily="@font/opensans_bold"
@@ -207,6 +208,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_marginHorizontal="@dimen/_4sdp"
+                                        android:contentDescription="fullAmountTV"
                                         android:layout_weight="1"
                                         android:background="@drawable/button_bg_lightgray_core"
                                         android:fontFamily="@font/opensans_semibold"
@@ -222,6 +224,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_marginHorizontal="@dimen/_4sdp"
+                                        android:contentDescription="halfAmountTV"
                                         android:layout_weight="1"
                                         android:background="@drawable/button_bg_lightgray_core"
                                         android:fontFamily="@font/opensans_semibold"
@@ -248,6 +251,7 @@
                                     android:id="@+id/remarksLL"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:contentDescription="remarksLL"
                                     android:layout_marginTop="@dimen/_10sdp"
                                     android:orientation="vertical">
 
