preciew dialog new changes

--- a/app/src/main/res/layout/custom_keyboard.xml
+++ b/app/src/main/res/layout/custom_keyboard.xml
@@ -26,8 +26,8 @@
                     android:layout_height="45dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:contentDescription="keyOneTV"
                     android:background="@drawable/custom_keyboard_key_bg"
+                    android:contentDescription="keyOneTV"
                     android:gravity="center"
                     android:text="1"
                     android:textColor="@color/black"
@@ -40,8 +40,8 @@
                     android:layout_height="45dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:contentDescription="keyTwoTV"
                     android:background="@drawable/custom_keyboard_key_bg"
+                    android:contentDescription="keyTwoTV"
                     android:gravity="center"
                     android:text="2"
                     android:textColor="@color/black"
@@ -54,8 +54,8 @@
                     android:layout_height="45dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:contentDescription="keyThreeTV"
                     android:background="@drawable/custom_keyboard_key_bg"
+                    android:contentDescription="keyThreeTV"
                     android:gravity="center"
                     android:text="3"
                     android:textColor="@color/black"
@@ -68,8 +68,8 @@
                     android:layout_height="45dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:contentDescription="keyBackLL"
                     android:background="@drawable/custom_keyboard_key_bg"
+                    android:contentDescription="keyBackLL"
                     android:gravity="center">
 
                     <ImageView
@@ -105,8 +105,8 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
-                            android:contentDescription="keyFourTV"
                             android:background="@drawable/custom_keyboard_key_bg"
+                            android:contentDescription="keyFourTV"
                             android:gravity="center"
                             android:text="4"
                             android:textColor="@color/black"
@@ -119,8 +119,8 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
-                            android:contentDescription="keyFiveTV"
                             android:background="@drawable/custom_keyboard_key_bg"
+                            android:contentDescription="keyFiveTV"
                             android:gravity="center"
                             android:text="5"
                             android:textColor="@color/black"
@@ -133,8 +133,8 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
-                            android:contentDescription="keySixTV"
                             android:background="@drawable/custom_keyboard_key_bg"
+                            android:contentDescription="keySixTV"
                             android:gravity="center"
                             android:text="6"
                             android:textColor="@color/black"
@@ -156,8 +156,8 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
-                            android:contentDescription="keySevenTV"
                             android:background="@drawable/custom_keyboard_key_bg"
+                            android:contentDescription="keySevenTV"
                             android:gravity="center"
                             android:text="7"
                             android:textColor="@color/black"
@@ -170,8 +170,8 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
-                            android:contentDescription="keyEightTV"
                             android:background="@drawable/custom_keyboard_key_bg"
+                            android:contentDescription="keyEightTV"
                             android:gravity="center"
                             android:text="8"
                             android:textColor="@color/black"
@@ -184,8 +184,8 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
-                            android:contentDescription="keyNineTV"
                             android:background="@drawable/custom_keyboard_key_bg"
+                            android:contentDescription="keyNineTV"
                             android:gravity="center"
                             android:text="9"
                             android:textColor="@color/black"
@@ -198,8 +198,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.34"
                         android:layout_marginBottom="@dimen/_21sdp"
+                        android:layout_weight="0.34"
                         android:orientation="horizontal">
 
                         <TextView
@@ -208,8 +208,8 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="2"
-                            android:contentDescription="keyZeroTV"
                             android:background="@drawable/custom_keyboard_key_bg"
+                            android:contentDescription="keyZeroTV"
                             android:gravity="center"
                             android:text="0"
                             android:textColor="@color/black"
@@ -222,8 +222,8 @@
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
                             android:layout_weight="1"
-                            android:contentDescription="dotTV"
                             android:background="@drawable/custom_keyboard_key_bg"
+                            android:contentDescription="dotTV"
                             android:gravity="center"
                             android:text="."
                             android:textColor="@color/black"
@@ -242,19 +242,19 @@
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:contentDescription="keyActionLL"
                     android:background="@drawable/custom_keyboard_action_btn_disable_bg"
+                    android:contentDescription="keyActionLL"
                     android:gravity="center">
 
                     <TextView
                         android:id="@+id/keyActionTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_semibold"
                         android:gravity="center"
-                        android:text="Pay"
+                        android:text="Refund"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/_16sdp"
-                        android:textStyle="bold" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
             </LinearLayout>
 
