--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -240,7 +240,7 @@
 
                                 <View
                                     android:layout_width="match_parent"
-                                    android:layout_height="2dp"
+                                    android:layout_height="@dimen/_1sdp"
                                     android:layout_gravity="center"
                                     android:layout_marginLeft="@dimen/_15sdp"
                                     android:layout_marginTop="@dimen/_20sdp"
