--- a/app/src/main/res/layout/merchant_qr.xml
+++ b/app/src/main/res/layout/merchant_qr.xml
@@ -72,8 +72,8 @@
                         android:layout_width="@dimen/_178sdp"
                         android:layout_height="@dimen/_178sdp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="@dimen/_16sdp"
                         android:layout_marginHorizontal="@dimen/_32sdp"
+                        android:layout_marginTop="@dimen/_16sdp"
                         android:layout_marginBottom="@dimen/_34sdp"
                         android:background="@drawable/qr_image_outline">
 
@@ -91,14 +91,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:orientation="vertical"
                     android:padding="@dimen/_60sdp"
-                    android:visibility="visible"
-                    android:orientation="vertical">
+                    android:visibility="visible">
 
                     <com.airbnb.lottie.LottieAnimationView
                         android:id="@+id/lottieAnimV"
                         android:layout_width="@dimen/_190sdp"
-                        android:layout_height="@dimen/_190sdp"
+                        android:layout_height="@dimen/_90sdp"
                         app:lottie_autoPlay="true"
                         app:lottie_loop="true"
                         app:lottie_rawRes="@raw/teal_loading_circle" />
@@ -112,8 +112,7 @@
                         android:text="Waiting on customer..."
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp"
-                        android:visibility="gone"
-                        android:layout_marginTop="@dimen/_10sdp"/>
+                        android:visibility="invisible" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
