--- a/app/src/main/res/layout/filter_childitems.xml
+++ b/app/src/main/res/layout/filter_childitems.xml
@@ -23,7 +23,9 @@
                 android:layout_height="wrap_content"
                 android:focusable="false"
                 android:theme="@style/AppTheme"
-                android:visibility="visible" />
+                android:visibility="visible"
+                android:layout_marginEnd="@dimen/_7sdp"
+                android:button="@drawable/custom_checkbox"/>
 
             <TextView
                 android:id="@+id/childTextTV"
