--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -15,9 +15,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="false"
-            android:contentDescription="checkCB"
             android:theme="@style/AppTheme"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:layout_marginEnd="@dimen/_7sdp"
+            android:button="@drawable/custom_checkbox"/>
 
         <TextView
             android:id="@+id/parentTextTV"
