--- a/app/src/main/res/layout/fragment_dashboard_frag.xml
+++ b/app/src/main/res/layout/fragment_dashboard_frag.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:id="@+id/FirstFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,7 +38,7 @@
                         <TextView
                             android:id="@+id/tvTerminalName"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="26dp"
                             android:layout_marginBottom="@dimen/_3sdp"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="center"
@@ -74,6 +75,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/saleIMG"
                             android:layout_width="@dimen/_150sdp"
                             android:layout_height="@dimen/_150sdp"
                             android:layout_marginTop="@dimen/_27sdp"
